<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_background"
    android:padding="8dp">


    <TextView
        android:id="@+id/messageTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tts_dialog_message"
        android:textAlignment="center"
        android:textColor="@color/dark_mode_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogPronunciationCHBtn" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dialogPronunciationCHBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/speak_chinese"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_sound_default"
        app:layout_constraintEnd_toStartOf="@+id/dialogPronunciationPLBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dialogPronunciationPLBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/speak_polish"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_sound_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialogPronunciationCHBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/settings"
        android:textColor="@color/dark_mode_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogDontShowAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/do_not_show_again"
        android:textColor="@color/dark_mode_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTv" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/dialogCloseBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/close"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/languageLabelCH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:text="CH"
        android:textColor="@color/dark_mode_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialogPronunciationCHBtn"
        app:layout_constraintEnd_toEndOf="@+id/dialogPronunciationCHBtn"
        app:layout_constraintStart_toStartOf="@+id/dialogPronunciationCHBtn" />

    <TextView
        android:id="@+id/languageLabelPL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:text="PL"
        android:textColor="@color/dark_mode_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialogPronunciationPLBtn"
        app:layout_constraintEnd_toEndOf="@+id/dialogPronunciationPLBtn"
        app:layout_constraintStart_toStartOf="@+id/dialogPronunciationPLBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>