<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/traditionalSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder_text"
        android:textColor="@color/dark_mode_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/speakSentenceBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/simplifiedSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder_text"
        android:textColor="@color/dark_mode_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/speakSentenceBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/traditionalSent" />

    <TextView
        android:id="@+id/translationSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/placeholder_text"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/speakSentenceBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simplifiedSent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sentencesMoreBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/sentences_options"
        android:src="@drawable/ic_more_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/speakSentenceBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_grey_green_ripple_bg"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/speak"
        android:src="@drawable/ic_sound_default"
        app:layout_constraintBottom_toBottomOf="@+id/sentencesMoreBtn"
        app:layout_constraintEnd_toStartOf="@+id/sentencesMoreBtn"
        app:layout_constraintTop_toTopOf="@+id/sentencesMoreBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>